--- a/front/src/main/resources/application.properties
+++ b/front/src/main/resources/application.properties
@@ -6,8 +6,6 @@ spring.cloud.consul.discovery.prefer-ip-address=true
 spring.config.import=optional:consul:
 spring.cloud.config.enabled=false
 
-server.forward-headers-strategy=native
-
 spring.security.oauth2.client.provider.keycloak.issuer-uri=http://keycloak:8080/realms/intershop
 spring.security.oauth2.client.registration.keycloak.authorizationGrantType=client_credentials
 spring.security.oauth2.client.registration.keycloak.provider=keycloak
@@ -15,7 +13,7 @@ spring.security.oauth2.client.registration.keycloak.client-id=intershop
 spring.security.oauth2.client.registration.keycloak.client-secret=amrFoOMw2qhy50x126fYC2BJXETm6V1L
 spring.security.oauth2.client.registration.keycloak.scope=profile
 spring.security.oauth2.client.registration.keycloak.clientAuthenticationMethod: client_secret_post
-gateway.host=
+gateway.host=http://localhost:8080
 account.host=http://localhost:8089
 transfer.host=
 cash.host=
