--- a/notification/src/main/resources/application.properties
+++ b/notification/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=notification
-server.port=8093
+server.port=8080
 
 spring.cloud.consul.host=localhost
 spring.cloud.consul.port=8500
@@ -7,6 +7,7 @@ spring.cloud.consul.discovery.prefer-ip-address=true
 spring.config.import=optional:consul:
 spring.cloud.config.enabled=false
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://keycloak:8080/realms/intershop
+management.health.mail.enabled=false
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
