--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -65,6 +65,7 @@ pipeline {
                     helm dependencies build
                     helm upgrade --install bankapp . \\
                     --namespace test --create-namespace \\
+                    --atomic --wait \\
                     --set account-service.image.tag=${IMAGE_TAG} \\
                     --set front-service.image.tag=${IMAGE_TAG} \\
                     --set cash-service.image.tag=${IMAGE_TAG} \\
@@ -103,6 +104,7 @@ pipeline {
                     sh """
                     helm upgrade --install bankapp . \\
                     --namespace prod --create-namespace \\
+                    --atomic --wait \\
                     --set account-service.image.tag=${IMAGE_TAG} \\
                     --set front-service.image.tag=${IMAGE_TAG} \\
                     --set cash-service.image.tag=${IMAGE_TAG} \\
