--- a/cash/src/main/resources/application.properties
+++ b/cash/src/main/resources/application.properties
@@ -9,6 +9,12 @@ spring.cloud.consul.config.enabled=false
 spring.cloud.consul.discovery.enabled=false
 spring.cloud.consul.discovery.register=false
 
+spring.kafka.bootstrap-servers=kafka:9092
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.producer.properties.spring.json.type.mapping=message:ru.practicum.bank.cash.models.MessageDto
+topic.name=messages
+
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://keycloak:8080/realms/intershop
 spring.security.oauth2.client.provider.keycloak.issuer-uri=http://keycloak:8080/realms/intershop
 spring.security.oauth2.client.registration.keycloak.authorizationGrantType=client_credentials
