--- a/transfer/src/main/resources/application.properties
+++ b/transfer/src/main/resources/application.properties
@@ -7,6 +7,12 @@ spring.cloud.consul.discovery.prefer-ip-address=true
 spring.config.import=optional:consul:
 spring.cloud.config.enabled=false
 
+spring.kafka.bootstrap-servers=kafka:9092
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.producer.properties.spring.json.type.mapping=message:ru.practicum.bank.transfer.models.Message
+topic.name=messages
+
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://keycloak:8080/realms/intershop
 spring.security.oauth2.client.provider.keycloak.issuer-uri=http://keycloak:8080/realms/intershop
 spring.security.oauth2.client.registration.keycloak.authorizationGrantType=client_credentials
