--- a/exchange-generator/src/main/resources/application.properties
+++ b/exchange-generator/src/main/resources/application.properties
@@ -7,6 +7,10 @@ spring.cloud.consul.discovery.prefer-ip-address=true
 spring.config.import=optional:consul:
 spring.cloud.config.enabled=false
 
+spring.kafka.bootstrap-servers=kafka:9092
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+
 spring.security.oauth2.client.provider.keycloak.issuer-uri=http://keycloak:8080/realms/intershop
 spring.security.oauth2.client.registration.keycloak.authorizationGrantType=client_credentials
 spring.security.oauth2.client.registration.keycloak.provider=keycloak
@@ -15,3 +19,4 @@ spring.security.oauth2.client.registration.keycloak.client-secret=amrFoOMw2qhy50
 spring.security.oauth2.client.registration.keycloak.scope=profile
 spring.security.oauth2.client.registration.keycloak.clientAuthenticationMethod: client_secret_post
 exchange.host=http://gateway:8080/exchange
+topic.name=exchange-rates
