--- a/exchange/src/main/resources/application.properties
+++ b/exchange/src/main/resources/application.properties
@@ -8,3 +8,11 @@ spring.config.import=optional:consul:
 spring.cloud.config.enabled=false
 
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://keycloak:8080/realms/intershop
+
+spring.kafka.bootstrap-servers=http://kafka:9092
+spring.kafka.consumer.group-id=exchange-rates-consumer
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.properties.spring.json.trusted.packages: ru.practicum.bank
+spring.kafka.consumer.properties.spring.json.type.mapping=ru.practicum.bank.exchange_generator.domain.Rate:ru.practicum.bank.exchange.domain.Rate
+topic.name=exchange-rates
