--- a/notification/src/main/resources/application.properties
+++ b/notification/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=notification
-server.port=8080
+server.port=8089
 
 spring.cloud.consul.host=localhost
 spring.cloud.consul.port=8500
@@ -15,4 +15,14 @@ spring.mail.username= gmail user name
 spring.mail.password= your password
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+spring.kafka.bootstrap-servers=http://kafka:9092
+spring.kafka.consumer.group-id=notification-consumer
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.auto-offset-reset=latest
+spring.kafka.consumer.enable-auto-commit=false
+spring.kafka.consumer.properties.spring.json.trusted.packages=ru.practicum.bank
+spring.kafka.consumer.properties.spring.json.type.mapping=ru.practicum.bank.cash.models.MessageDto:ru.practicum.bank.notification.domain.Message
+topic.name=messages
 
