--- a/helm/bank-app/charts/bank-exchange-generator-service/templates/configmap.yaml
+++ b/helm/bank-app/charts/bank-exchange-generator-service/templates/configmap.yaml
@@ -19,6 +19,8 @@ data:
   # Use the 'tpl' function to render the database_url which contains Helm templating itself
   EXCHANGE_HOST: {{ tpl .Values.config.exchange_host . | quote }}
   SPRING_SECURITY_OAUTH2_CLIENT_PROVIDER_KEYCLOAK_ISSUER-URI: {{ tpl .Values.config.keycloak_uri . | quote }}
+  SPRING_KAFKA_BOOTSTRAP-SERVERS: {{ tpl .Values.config.kafka_server . | quote }}
+  TOPIC_NAME: {{ tpl .Values.config.rates_topic_name . | quote }}
 
   # SPRING_DATASOURCE_PASSWORD would typically come from a secret, not this ConfigMap.
 
