--- a/helm/bank-app/charts/bank-exchange-generator-service/values.yaml
+++ b/helm/bank-app/charts/bank-exchange-generator-service/values.yaml
@@ -125,3 +125,5 @@ affinity: {}
 config:
   keycloak_uri: "http://bankapp-keycloak.{{ .Release.Namespace }}.svc.cluster.local/realms/intershop"
   exchange_host: "http://bankapp-exchange-service.{{ .Release.Namespace }}.svc.cluster.local:8081"
+  kafka_server: "kafka.{{ .Release.Namespace }}.svc.cluster.local:9092"
+  rates_topic_name: "exchange-rates"
