--- a/helm/bank-app/charts/bank-transfer-service/templates/configmap.yaml
+++ b/helm/bank-app/charts/bank-transfer-service/templates/configmap.yaml
@@ -16,6 +16,8 @@ data:
   EXCHANGE_HOST: {{ tpl .Values.config.exchange_host . | quote }}
   SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_ISSUER-URI: {{ tpl .Values.config.keycloak_uri . | quote }}
   SPRING_SECURITY_OAUTH2_CLIENT_PROVIDER_KEYCLOAK_ISSUER-URI: {{ tpl .Values.config.keycloak_uri . | quote }}
+  SPRING_KAFKA_BOOTSTRAP-SERVERS: {{ tpl .Values.config.kafka_server . | quote }}
+  TOPIC_NAME: {{ tpl .Values.config.notification_topic_name . | quote }}
 
   # Example: Include other config defined in values.yaml
   # OTHER_CONFIG_PARAM: {{ .Values.config.some_other_config | quote }}
