--- a/blocker/src/main/resources/application.properties
+++ b/blocker/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 spring.application.name=blocker
 server.port=8080
 
+management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
+management.tracing.sampling.probability=1
+management.endpoints.web.exposure.include=*
+
 spring.cloud.consul.host=localhost
 spring.cloud.consul.port=8500
 spring.cloud.consul.config.enabled=false
