--- a/exchange/src/main/resources/application.properties
+++ b/exchange/src/main/resources/application.properties
@@ -3,11 +3,15 @@ server.port=8081
 server.forward-headers-strategy=framework
 spring.cloud.consul.host=localhost
 spring.cloud.consul.port=8500
-spring.cloud.consul.discovery.prefer-ip-address=true 
+spring.cloud.consul.discovery.prefer-ip-address=true
 spring.config.import=optional:consul:
 spring.cloud.config.enabled=false
 
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://keycloak:8080/realms/intershop
+
+management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
+management.tracing.sampling.probability=1
+management.endpoints.web.exposure.include=*
 
 spring.kafka.bootstrap-servers=http://kafka:9092
 spring.kafka.consumer.group-id=exchange-rates-consumer
