--- a/front/src/main/resources/application.properties
+++ b/front/src/main/resources/application.properties
@@ -7,6 +7,11 @@ spring.config.import=optional:consul:
 spring.cloud.consul.config.enabled=false
 spring.cloud.consul.discovery.enabled=false
 spring.cloud.consul.discovery.register=false
+
+management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
+management.tracing.sampling.probability=1
+management.endpoints.web.exposure.include=*
+
 spring.security.oauth2.client.provider.keycloak.issuer-uri=http://keycloak:8080/realms/intershop
 spring.security.oauth2.client.registration.keycloak.authorizationGrantType=client_credentials
 spring.security.oauth2.client.registration.keycloak.provider=keycloak
