--- a/notification/src/main/resources/application.properties
+++ b/notification/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=notification
-server.port=8089
+server.port=8080
 
 spring.cloud.consul.host=localhost
 spring.cloud.consul.port=8500
-spring.cloud.consul.discovery.prefer-ip-address=true 
+spring.cloud.consul.discovery.prefer-ip-address=true
 spring.config.import=optional:consul:
 spring.cloud.config.enabled=false
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://keycloak:8080/realms/intershop
@@ -16,13 +16,17 @@ spring.mail.password= your password
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
+management.tracing.sampling.probability=1
+management.endpoints.web.exposure.include=*
+
 spring.kafka.bootstrap-servers=http://kafka:9092
 spring.kafka.consumer.group-id=notification-consumer
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
 spring.kafka.consumer.auto-offset-reset=latest
 spring.kafka.consumer.enable-auto-commit=false
-spring.kafka.consumer.properties.spring.json.trusted.packages=ru.practicum.bank
-spring.kafka.consumer.properties.spring.json.type.mapping=ru.practicum.bank.cash.models.MessageDto:ru.practicum.bank.notification.domain.Message
+spring.kafka.consumer.properties.spring.json.trusted.packages=ru.practicum.bank,message
+spring.kafka.consumer.properties.spring.json.type.mapping=message:ru.practicum.bank.notification.domain.Message
 topic.name=messages
 
