--- a/account/src/main/resources/application.properties
+++ b/account/src/main/resources/application.properties
@@ -15,6 +15,10 @@ spring.config.import=optional:consul:
 spring.cloud.consul.discovery.prefer-ip-address=true 
 spring.cloud.config.enabled=false
 
+management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
+management.tracing.sampling.probability=1
+management.endpoints.web.exposure.include=*
+
 spring.kafka.bootstrap-servers=kafka:9092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
