--- a/cash/src/main/resources/application.properties
+++ b/cash/src/main/resources/application.properties
@@ -14,6 +14,9 @@ spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.Strin
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 spring.kafka.producer.properties.spring.json.type.mapping=message:ru.practicum.bank.cash.models.MessageDto
 topic.name=messages
+management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
+management.tracing.sampling.probability=1
+management.endpoints.web.exposure.include=*
 
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://keycloak:8080/realms/intershop
 spring.security.oauth2.client.provider.keycloak.issuer-uri=http://keycloak:8080/realms/intershop
