--- a/exchange-generator/src/main/resources/application.properties
+++ b/exchange-generator/src/main/resources/application.properties
@@ -11,6 +11,10 @@ spring.kafka.bootstrap-servers=kafka:9092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 
+management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
+management.tracing.sampling.probability=1
+management.endpoints.web.exposure.include=*
+
 spring.security.oauth2.client.provider.keycloak.issuer-uri=http://keycloak:8080/realms/intershop
 spring.security.oauth2.client.registration.keycloak.authorizationGrantType=client_credentials
 spring.security.oauth2.client.registration.keycloak.provider=keycloak
