--- a/transfer/src/main/resources/application.properties
+++ b/transfer/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8080
 
 spring.cloud.consul.host=localhost
 spring.cloud.consul.port=8500
-spring.cloud.consul.discovery.prefer-ip-address=true 
+spring.cloud.consul.discovery.prefer-ip-address=true
 spring.config.import=optional:consul:
 spring.cloud.config.enabled=false
 
@@ -12,6 +12,10 @@ spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.Strin
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 spring.kafka.producer.properties.spring.json.type.mapping=message:ru.practicum.bank.transfer.models.Message
 topic.name=messages
+
+management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
+management.tracing.sampling.probability=1
+management.endpoints.web.exposure.include=*
 
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://keycloak:8080/realms/intershop
 spring.security.oauth2.client.provider.keycloak.issuer-uri=http://keycloak:8080/realms/intershop
